--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,9 @@ a {
 }
 
 img{
-    max-width: 100px;
+    max-width: 100%;
+    display: block;
+    border-radius: 5px;
 }
 
 /* GRID GERAL */
@@ -30,27 +32,113 @@ img{
     ;
 }
 
+/* HEADER */
+
 .header {
     grid-area: header;
-    background-color: lightgrey;
+    background: linear-gradient(135deg, #8844ee, #B07DFB);
+    padding: 30px;
+    display: grid;
+    grid-template-columns: 1fr auto;
+    align-items: center;
 }
+
+.logo {
+    max-width: 200px;
+}
+
+.header nav ul {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.header nav a {
+    display: block;
+    padding: 10px;
+    color: white;
+    font-size: 1.125em;
+    background: rgba(0,0,0,.1);
+    border-radius: 5px;
+    transition: 1s;
+}
+
+.header nav a:hover {
+    background: rgba(0,0,0,.5);
+}
+
+.header li + li {
+    margin-left: 30px;
+}
+
+/* SIDENAV */
 
 .sidenav {
     grid-area: sidenav;
-    background-color: lightpink;
+    background: #fafbfc;
+    padding: 30px;
 }
+
+.sidenav li a{
+    display: block;
+    min-width: 60px;
+    max-width: 100px;
+    margin: 0 auto 30px auto;
+    background: white;
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 5px 5px 15px 0px rgba(44,44,44,0.15);
+    transition: .1s ease-out;
+}
+
+.sidenav li a:hover{
+    background: #B07DFB;
+}
+
+/* CONTENT */
 
 .content {
     grid-area: content;
-    background-color: lightsalmon;
+    max-width: 900px;
+    margin: 0 auto;
+    padding: 30px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 30px;
 }
+
+.col-wide {
+    grid-column: 1 / -1;
+}
+
+.imagem-1 {
+    grid-row: span 2;
+    align-self: end;
+}
+
+.imagem-2 {
+    align-self: end;
+}
+
+/* ANUNCIO */
 
 .anuncios {
     grid-area: anuncios;
-    background-color: lightseagreen;
+    background: #fafbfc;
+    display: grid;
+    align-content: start;
+    padding: 30px;
+    gap: 30px;
 }
+
+/* FOOTER */
 
 .footer {
     grid-area: footer;
-    background-color: lightskyblue;
+    background: linear-gradient(135deg, #8844ee, #B07DFB);
+}
+
+.footer p {
+    color: white;
+    text-align: center;
+    padding: 30px;
 }
