Boa parte do responsivo feita, faltam menu e ajustes no content

--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,30 @@ img{
     ;
 }
 
+@media (max-width: 1200px){
+    .estrutura{    
+        grid-template-areas: 
+            "header header header"
+            "sidenav content content"
+            "sidenav anuncios anuncios"
+            "footer footer footer"
+        ;
+    }
+}
+
+@media (max-width: 760px){
+    .estrutura{
+        grid-template-columns: 100%;
+        grid-template-areas: 
+            "header"
+            "sidenav"
+            "content"
+            "anuncios"
+            "footer"
+        ;
+    }
+}
+
 /* HEADER */
 
 .header {
