--- a/css/style.css
+++ b/css/style.css
@@ -94,6 +94,21 @@ img{
     margin-left: 30px;
 }
 
+@media (max-width:760px) {
+    .header {
+        grid-template-columns: auto;
+    }
+    .logo {
+        margin-bottom: 20px;
+    }
+    .header nav a{
+    font-size: 1em;
+    }
+    .header li + li {
+        margin-left: 10px;
+    }
+}
+
 /* SIDENAV */
 
 .sidenav {
@@ -116,6 +131,45 @@ img{
 
 .sidenav li a:hover{
     background: #B07DFB;
+}
+
+@keyframes seta {
+    from {
+        right: 30px;
+    }
+    to {
+        right: 20px;
+    }
+}
+
+@media (max-width: 760px) {
+    .sidenav {
+        position: relative;
+        overflow-x: auto;
+        -webkit-overflow-scrolling: touch;
+        -ms-overflow-style: -ms-autohiding-scrollbar;
+    }
+    .sidenav::after {
+        content: "→";
+            position: absolute;
+            top: 5px;
+            right: 30px;
+            color: rgba(0,0,0,.3);
+            animation: seta .5s ease-in 0s infinite alternate;
+    }
+
+    .sidenav ul {
+        display: flex;
+    }    
+    .sidenav ul li {
+        flex: 1 0 60px;
+    }
+    .sidenav {
+        padding: 0 30px;
+    }
+    .sidenav li a {
+        margin: 30px 30px 30px 0px;
+    }
 }
 
 /* CONTENT */
