--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ a {
 }
 
 img{
-    max-width: 100%;
+    width: 100%;
     display: block;
     border-radius: 5px;
 }
@@ -184,6 +184,12 @@ img{
     gap: 30px;
 }
 
+@media (max-width: 600px) {
+    .content { 
+    grid-template-columns: auto;
+    }
+}
+
 .col-wide {
     grid-column: 1 / -1;
 }
@@ -310,6 +316,8 @@ p {
     align-content: start;
     padding: 30px;
     gap: 30px;
+    grid-template-columns: repeat(auto-fit, 
+    minmax(150px, 1fr));
 }
 
 /* FOOTER */
